--- a/k27/tonghop5.html
+++ b/k27/tonghop5.html
@@ -39,7 +39,7 @@
 		<label id="seconds">00</label>
 		</div>
 		<div style="text-align: center;">
-		<button onclick="Batdau_click()">Bắt đầu làm test Kết giác mạc</button>
+		<button onclick="Batdau_click()">Bắt đầu làm test Tổng hợp 5</button>
 		<button onclick="Lamlai_click()">Làm lại</button><br/>
 		Số câu làm đúng: <label id = "so_caulamdung"></label>/<label id = "so_dalam"></label> (Tổng: <label id = "tong_socau"></label>)
 	    </div>
