--- a/k27/tonghop1.html
+++ b/k27/tonghop1.html
@@ -39,7 +39,7 @@
 		<label id="seconds">00</label>
 		</div>
 		<div style="text-align: center;">
-		<button onclick="Batdau_click()">Bắt đầu làm test Tổng hợp 1</button>
+		<button onclick="Batdau_click()">Bắt đầu làm test Kết giác mạc</button>
 		<button onclick="Lamlai_click()">Làm lại</button><br/>
 		Số câu làm đúng: <label id = "so_caulamdung"></label>/<label id = "so_dalam"></label> (Tổng: <label id = "tong_socau"></label>)
 	    </div>
@@ -47,10 +47,6 @@
 	<br/>
 	<br/>
 <div id = "ketqua"></div>
-<div style="font-size:10ft;">Phần mềm trắc nghiệm nhãn khoa v0.1 - Tác giả Nguyễn Đức Thịnh CH27 Nhãn khoa <br/>
-	 Toàn bộ nội dung thuộc về bộ môn Mắt - Đại học Y Hà Nội <br/>
-	 Phần mềm chỉ dùng cho mục đích tham khảo nội bộ, không được sử dụng lại dưới bất kỳ hình thức nào khác
-</div>
 <script type="text/javascript">
 	var noidung = `Câu hỏi 1
 Đoạn văn câu hỏi
