--- a/nhankhoa/lac/index.html
+++ b/nhankhoa/lac/index.html
@@ -381,7 +381,7 @@
 </div>
 <div class="menuButton" id="menuTestButton">
 <div id="menuTestButtonTitle">Chế độ thử nghiệm</div>
-<div id="menuTestButtonInfo">Lượng giá độ lác trong<br/>ba mẫu bệnh nhân ngẫu nhiên</div>
+<div id="menuTestButtonInfo">Lượng giá độ lác với<br/>ba mẫu bệnh nhân ngẫu nhiên</div>
 </div>
 
 
