--- a/nhankhoa/lac/index.html
+++ b/nhankhoa/lac/index.html
@@ -11,6 +11,15 @@
 <script type="text/javascript" src="jquery-2.1.4.min.js" defer></script>
 <script type="text/javascript" src="Script.js" defer></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160779941-1');
+</script>
 
 </head>
 
