--- a/nhankhoa/index.html
+++ b/nhankhoa/index.html
@@ -53,7 +53,7 @@ a:active {
 	var isAndroid = ua.indexOf("android") > -1; //&& ua.indexOf("mobile");
 	if(isAndroid) {
 	 if(confirm('Bạn có muốn tải phiên bản Android về điện thoại?') == true)
-        window.location = 'https://github.com/drthinh/drthinh.github.io/releases/download/1.0/congcunhankhoa.apk';
+        window.location = 'https://play.google.com/store/apps/details?id=com.drthinh';
 }
 	</script>
 </body>
