--- a/nhankhoa/lac/babuoc/index.html
+++ b/nhankhoa/lac/babuoc/index.html
@@ -6,6 +6,14 @@
 	<link href="parks3step.css" rel="stylesheet" type="text/css">
 	<script src="jquery.min.js" type="text/javascript"></script>
 	<script src="parks3step.js" type="text/javascript"></script>	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+  	gtag('config', 'UA-160779941-1');
+	</script>
 <!-- META FOR IOS & HANDHELD -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
 	<style type="text/stylesheet">
