--- a/svelte/index.html
+++ b/svelte/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Svelte</title>
-    <script type="module" crossorigin src="/assets/index.aadee75a.js"></script>
-    <link rel="stylesheet" href="/assets/index.65be3931.css">
+    <script type="module" crossorigin src="index.aadee75a.js"></script>
+    <link rel="stylesheet" href="index.65be3931.css">
   </head>
   <body>
     <div id="app"></div>
