--- a/webview1/index.html
+++ b/webview1/index.html
@@ -1,2 +1,7 @@
 <html>
+    <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"></script>
+    <body>
+        <input type="text" id = "t1" />
+        <input type="text" id = "t2" />
+    </body>
 </html>
