--- a/thiluc/index.html
+++ b/thiluc/index.html
@@ -92,6 +92,10 @@
                         <input id="checkCrowd" class="check" type="checkbox" name="crowd" onchange="WriteURL()"><span id="uiCheckCrowd">[b] Hiệu ứng đám đông</span>
                         <input type="radio" name="nearFar" value="far" onclick="WriteURL()" checked hidden></input>
                         <input type="button" name="reset" value="Mặc định" onclick="initSnellen()" checked></input>
+                        <span id = "logo">Việt hóa và chỉnh sửa: ThS.BS Nguyễn Đức Thịnh. Nguồn: openoptometry.com</span>
+                    </td>
+                    <td>
+                    	
                     </td>
                 </tr>
             </table>
