--- a/thiluc/index.html
+++ b/thiluc/index.html
@@ -96,8 +96,8 @@
                     </td>
                     <td></td>
                     <td>
-                    	<span id = "auth"> Việt hóa và chỉnh sửa: ThS.BS Nguyễn Đức Thịnh. Nguồn: openoptometry.com</span><br/>
-                        <span>Khoa Mắt - Bệnh viện Đa khoa Đức Giang</span>
+                    	Việt hóa và chỉnh sửa: ThS.BS Nguyễn Đức Thịnh. Nguồn: openoptometry.com<br/>
+                        Khoa Mắt - Bệnh viện Đa khoa Đức Giang
                     </td>
                 </tr>
             </table>
