--- a/thiluc/index.html
+++ b/thiluc/index.html
@@ -47,18 +47,17 @@
             <table>
                 <tr>
                     <td>
-                        <h2>Căn chỉnh</h2>
-                        <input type="number" id="lineSize" name="lineSize" value="2.5" style="width:5em" "size=" 5">
+                        <h2><img src="assets/line.svg" width="100" height="5" border="1"></h2>
+                        <input type="number" id="lineSize" name="lineSize" value="2.5" style="width:3em" "size=" 5">
                         <select name="lineUnits" value="cm" onchange="WriteURL()">
                             <option value="cm">cm</option>
                             <option value="inches">inch</option>
                         </select>
-                        <i>Đo đoạn thẳng này</i>
-                        <img src="assets/line.svg" width="100" height="5" border="1">
+                        
                     </td>
                     <td>
-                        <h2>Khoảng cách quan sát</h2>
-                        <input type="number" id="distanceSize" name="distance" value="6" style="width:5em" size="5" step="0.1" onkeyup="WriteURL()" onpaste="WriteURL()" oninput="WriteURL()">
+                        <h2>Khoảng cách Q/sát</h2>
+                        <input type="number" id="distanceSize" name="distance" value="6" style="width:3em" size="5" step="0.1" onkeyup="WriteURL()" onpaste="WriteURL()" oninput="WriteURL()">
                         <select name="distanceUnits" value="meters" onchange="WriteURL()">
                             <option value="meters">mét</option>
                             <option value="feet">feet</option>
@@ -87,16 +86,17 @@
                         <h2>Hiển thị</h2>
                         <a onclick="Refresh()" class="button buttonHide"></a>
                         <a id="buttonLarger" onclick="UserUp()" class="button buttonLarger uiMultipleRow"></a>
-                        <a id="buttonSmaller" onclick="UserDown()" class="button buttonSmaller uiMultipleRow"></a>
-                        <input class="check" type="checkbox" name="mirror" onchange="WriteURL()">[m] Gương
-                        <input id="checkCrowd" class="check" type="checkbox" name="crowd" onchange="WriteURL()"><span id="uiCheckCrowd">[b] Hiệu ứng đám đông</span>
-                        <input type="radio" name="nearFar" value="far" onclick="WriteURL()" checked hidden></input>
-                        <input type="button" name="reset" value="Mặc định" onclick="initSnellen()" checked></input>
-                        
+                        <a id="buttonSmaller" onclick="UserDown()" class="button buttonSmaller uiMultipleRow"></a>        
                     </td>
-                    <td></td>
                     <td>
-                    	Việt hóa và chỉnh sửa: ThS.BS Nguyễn Đức Thịnh. Nguồn: openoptometry.com<br/>
+		        <input class="check" type="checkbox" name="mirror" onchange="WriteURL()">[m] Gương<br/>
+                        <input id="checkCrowd" class="check" type="checkbox" name="crowd" onchange="WriteURL()"><span id="uiCheckCrowd">[b] Hiệu ứng đám đông</span><br/>          
+                        <input type="button" name="reset" value="Mặc định" onclick="initSnellen()" checked></input>
+			<input type="radio" name="nearFar" value="far" onclick="WriteURL()" checked hidden></input>
+		    </td>
+                    <td>
+                    	Việt hóa và chỉnh sửa: ThS.BS Nguyễn Đức Thịnh <br/> 
+                        Nguồn: openoptometry.com <br/>
                         Khoa Mắt - Bệnh viện Đa khoa Đức Giang
                     </td>
                 </tr>
