--- a/thiluc/index.html
+++ b/thiluc/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="scripts/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="scripts/hammer.min.js"></script>
     <script type="text/javascript" src="scripts/seedrandom.min.js"></script>
+    <script type="text/javascript" src="scripts/kinet.min.js"></script>
     <script type="text/javascript" src="scripts/chartType.js"></script>
     <script type="text/javascript" src="scripts/chartTypeSingle.js"></script>
     <script type="text/javascript" src="scripts/chartTypeRows.js"></script>
@@ -34,7 +35,35 @@
             "&" + "crowd=" + $(settings.crowd).prop("checked");
         location.hash = str;
         ReadURL();
-        UserUpDown(-7);
+        UserUpDown(-8);
+    }
+
+    function changeCursor(){
+	var cursor = document.getElementById('cursor');
+	var circle = document.getElementById('circle');
+        
+	if(cursor.checked == false){
+           circle.style.display = "none";
+	} else {
+           circle.style.display = "block";
+        }
+
+	var kinet = new Kinet({
+  	acceleration: 0.08,
+  	friction: 0.30,
+  	names: ["x", "y"],
+	});
+
+	
+
+	kinet.on('tick', function(instances) {
+  	circle.style.transform = `translate3d(${ (instances.x.current) }px, ${ (instances.y.current) }px, 0) rotateX(${ (instances.x.velocity/2) }deg) 	rotateY(${ (instances.y.velocity/2) }deg)`;
+	});
+
+	document.addEventListener('mousemove', function (event) {
+  	kinet.animate('x', event.clientX - window.innerWidth/2);
+  	kinet.animate('y', event.clientY - window.innerHeight/2);
+	});
     }
     </script>
 </head>
@@ -90,14 +119,15 @@
                     </td>
                     <td>
 		        <input class="check" type="checkbox" name="mirror" onchange="WriteURL()">[m] Gương<br/>
-                        <input id="checkCrowd" class="check" type="checkbox" name="crowd" onchange="WriteURL()"><span id="uiCheckCrowd">[b] Hiệu ứng đám đông</span><br/>          
-                        <input type="button" name="reset" value="Mặc định" onclick="initSnellen()" checked></input>
+                        <input id="checkCrowd" class="check" type="checkbox" name="crowd" onchange="WriteURL()"><span id="uiCheckCrowd">[b] Hiệu ứng đám đông</span><br/>        
+                        <input id = "cursor" class="check" type="checkbox" name="cursor" onchange="changeCursor()" checked="true">Trỏ chuột
 			<input type="radio" name="nearFar" value="far" onclick="WriteURL()" checked hidden></input>
 		    </td>
                     <td>
                     	Việt hóa và chỉnh sửa: ThS.BS Nguyễn Đức Thịnh <br/> 
                         Nguồn: openoptometry.com <br/>
-                        Khoa Mắt - Bệnh viện Đa khoa Đức Giang
+                        Khoa Mắt - Bệnh viện Đa khoa Đức Giang <br/>
+                        <input type="button" name="reset" value="Mặc định" onclick="initSnellen()"></input>
                     </td>
                 </tr>
             </table>
@@ -105,9 +135,12 @@
     </div>
     <div id="displayFrame">
     </div>
+    <div id="circle" class="circle"></div>
+    
     <script type="text/javascript">
     $(document).ready(function() {
         initSnellen();
+        changeCursor();
     });
     </script>
 </body>
