--- a/thiluc/index.html
+++ b/thiluc/index.html
@@ -53,7 +53,9 @@
   	friction: 0.30,
   	names: ["x", "y"],
 	});
-	    
+
+	
+
 	kinet.on('tick', function(instances) {
   	circle.style.transform = `translate3d(${ (instances.x.current) }px, ${ (instances.y.current) }px, 0) rotateX(${ (instances.x.velocity/2) }deg) 	rotateY(${ (instances.y.velocity/2) }deg)`;
 	});
@@ -136,8 +138,10 @@
     <div id="circle" class="circle"></div>
     
     <script type="text/javascript">
-    initSnellen();			  
-    changeCursor();			  
+    $(document).ready(function() {
+        initSnellen();
+        changeCursor();
+    });
     </script>
 </body>
 
