--- a/thiluc/index.html
+++ b/thiluc/index.html
@@ -19,6 +19,8 @@
     <script type="text/javascript" src="scripts/chartTypePosition.js"></script>
     <script type="text/javascript" src="scripts/chartSnellen.js"></script>
     <script type="text/javascript" src="scripts/chartContrast.js"></script>
+    <script type="text/javascript" src="scripts/chartDuochrome.js"></script>
+    <script type="text/javascript" src="scripts/chartIshihara.js"></script>
     <script type="text/javascript" src="scripts/init.js"></script>
     <script type="text/javascript">
     function initSnellen() {
