--- a/nhanapdich/index.html
+++ b/nhanapdich/index.html
@@ -11,7 +11,7 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/nhanapdich">
+  <base href="/nhanapdich/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -24,22 +24,22 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="./nhanapdich/favicon.png"/>
+  <link rel="icon" type="image/png" href="./favicon.png"/>
 
   <title>nhan_ap_dich</title>
-  <link rel="manifest" href="./nhanapdich/manifest.json">
+  <link rel="manifest" href="./manifest.json">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    // if ('serviceWorker' in navigator) {
-    //   window.addEventListener('flutter-first-frame', function () {
-    //     navigator.serviceWorker.register('flutter_service_worker.js?v=1280289851');
-    //   });
-    // }
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('flutter-first-frame', function () {
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1280289851');
+      });
+    }
   </script>
-  <script src="./nhanapdich/main.dart.js" type="application/javascript"></script>
+  <script src="./main.dart.js" type="application/javascript"></script>
 </body>
 </html>
