--- a/nhanapdich/index.html
+++ b/nhanapdich/index.html
@@ -26,7 +26,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>nhan_ap_dich</title>
+  <title>Tính nhãn áp đích</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
