--- a/nhankhoa/lac/index.html
+++ b/nhankhoa/lac/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="jquery-2.1.4.min.js" defer></script>
 <script type="text/javascript" src="Script.js" defer></script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160779941-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -19,7 +19,7 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-160779941-1');
-</script>
+</script> -->
 
 </head>
 
@@ -46,24 +46,14 @@
     	</div>
 </div>-->
 
-
-
-
-
-
-
 <div id="screenDimensions"></div>
 
-
-
 <div id="mainContainer">
-
 
 <canvas id="canvas1"></canvas>
 <canvas id="canvas2"></canvas>
 <canvas id="canvas3"></canvas>
 <canvas id="canvas4"></canvas>
-
 
 <div id="testBox">
 <div class="column">
@@ -102,8 +92,6 @@
 </ul>
 </div>
 </div>
-
-
 
 
 <div id="panel1" class="panelBG">
@@ -167,8 +155,6 @@
 <div class="arrow" id="tool_prism_sub"></div>
 </div>
 </div>
-
-
 
 
 <div id="panel4" class="panelBG">
@@ -277,8 +263,6 @@
 </div><!--panel 4 end-->
 
 
-
-
 <div id="panel5" class="panelBG">
 <div id="conditionContainer" class="innerPanelBG">
 <div id="tropiaContainer">
@@ -303,7 +287,6 @@
 <div id="testResetButton">Thử với 03 <br/> bệnh nhân mới</div>
 
 
-
 <div id="scoreBG">
 	<div id="scoreTitle">Kết quả:</div>
     <div id="scoreNumber">0/3</div>
@@ -321,25 +304,6 @@
 
 
 <div id="loadPatientsCover">Đang tạo mẫu thử mới...</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <div id="instructContainer">
 
@@ -385,11 +349,11 @@
 <div id="moduleTitle"></div>
 
 <div class="menuButton" id="menuReviewButton">
-<div id="menuReviewButtonTitle">Chế độ khám phá</div>
+<div id="menuReviewButtonTitle">Chế độ học tập</div>
 <div id="menuReviewButtonInfo">Học các dạng lác<br/>xuất hiện trong test che mắt</div>
 </div>
 <div class="menuButton" id="menuTestButton">
-<div id="menuTestButtonTitle">Chế độ thử nghiệm</div>
+<div id="menuTestButtonTitle">Chế độ lượng giá</div>
 <div id="menuTestButtonInfo">Lượng giá độ lác với<br/>ba mẫu bệnh nhân ngẫu nhiên</div>
 </div>
 
@@ -399,7 +363,7 @@
     <div id="creditBoxContainer">
     	<div id="creditTitle">Thông tin</div>
    	  	<div class="creditBox" id="creditBox1">
-   	  		<p class="creditBold">Việt hóa: Nguyễn Đức Thịnh CH27 Nhãn khoa HMU</p>
+   	  		<p class="creditBold">Việt hóa: ThS. BS. Nguyễn Đức Thịnh - 2020</p>
        		<p class="creditBold">Faruk H. Örge, MD</p>
             <div class="creditRegular">
         	<p>William R. and Margaret E. Althans Professor and Director</p>
