--- a/nhankhoa/lac/index.html
+++ b/nhankhoa/lac/index.html
@@ -363,8 +363,9 @@
     <div id="creditBoxContainer">
     	<div id="creditTitle">Thông tin</div>
    	  <div class="creditBox" id="creditBox1">
-	    <p class="creditBold">Faruk H. Örge, MD</p>
+            <p class="creditBold">Việt hóa: ThS. BS. Nguyễn Đức Thịnh - 2020</p>
             <div class="creditRegular">
+		<p>Faruk H. Örge, MD</p>
         	<p>William R. and Margaret E. Althans Professor and Director</p>
         	<p>Center for Pediatric Ophthalmology and Adult Strabismus</p>
         	<p>University Hospitals Eye Institute</p>
@@ -372,7 +373,7 @@
 			<p>Case Western Reserve University School of Medicine</p>
             </div>     
         </div>
-	<p class="creditBold">Việt hóa: ThS. BS. Nguyễn Đức Thịnh - 2020</p>
+	
     </div>
 	
     <div id="startButton">Bắt đầu</div>
