--- a/nhankhoa/lac/index.html
+++ b/nhankhoa/lac/index.html
@@ -254,7 +254,7 @@
 <div id="incompleteMessage">Lựa chọn.</div>
 <div id="submitButton">Hoàn tất</div>
 <div id="diagnose">Hoàn tất</div>
-<div id="patientNumber"><span id="patientN">1</span><span id="patientOf"> of </span>3</div>
+<div id="patientNumber"><span id="patientN">1</span><span id="patientOf"> trên </span>3</div>
 <div id="patientNext"><div id="patientNextImage"></div></div>
 <div id="patientPrev"><div id="patientPrevImage"></div></div>
 
